tests/codegen/errors/codegen/symbol-resolution/atom.codegen.90.diagnostics.symbol.resolution.rt.codegen.err.code.unbound/rt_codegen_err_code_unbound.mon
;; TEST-ID: tests.codegen.rt-codegen-err-code-unbound
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-CODEGEN-ATOM: atom.codegen.90.diagnostics.symbol.resolution.rt.codegen.err.code.unbound
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: symbol-resolution
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.codegen-diagnostics
;; TEST-PURPOSE: Codegen reports code reflection on an unbound symbol.
;; TEST-ATOM: (code missing) must fail with unbound symbol.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:90-diagnostics/symbol-resolution branch family
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/symbol-resolution/atom.codegen.90.diagnostics.symbol.resolution.rt.codegen.err.code.unbound
;; TEST-MENU-PATH: codegen/errors/codegen/symbol-resolution/atom.codegen.90.diagnostics.symbol.resolution.rt.codegen.err.code.unbound
;; TEST-ATOM-LEAF: atom.codegen.90.diagnostics.symbol.resolution.rt.codegen.err.code.unbound
;; TEST-CLI-TARGET: codegen errors codegen symbol-resolution
(module Main)
(code missing)
